[package]
name = "mage-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mage-core = { path = "../mage-core" }

[dev-dependencies]
color-eyre = "0.6"
tokio = "1.34.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

